[package]
name = "auto_relogon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.52.0", features=["Win32_Foundation", "Win32_System", "Win32_System_RemoteDesktop", "Win32_System_Com", "Win32_System_TaskScheduler", "Win32_System_Ole", "Win32_System_Variant", "Win32_Security"]}

