[package]
name = "gnome_renice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip=true
opt-level=3
lto=true

[dependencies]
procfs='0.15'
nix = {version='*', features=['process']}
clap = {version = "*", features = ["derive"]}
